# k8s-run

./: CLAUDE.md  README.md  TASK_MEMORY.md  install.sh  k8r.py  pyproject.toml  spec.md
